--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -6,75 +6,16 @@
     width: 33.3%;
 }
 
-.content section {
-    padding: 20px 0;
-    margin: 0 auto;
-}
-
-.content section h2 {
-    color: #454545;
-    font-family: Playfair Display;
-    padding-left: 0;
-    padding-top: 10px;
-    border-bottom: thin dotted;
-}
-
-.content section p {
-    padding: 20px 0;
-}
-
-.feature-content p {
-    padding-left: 20px;
-}
-
-p.sub_desc {
-    padding: 2em 0.5em 1em;
-}
-
-.skill-container {
-    position: relative;
-}
-
-.skill-tiles-container {
-    padding: 10px 0;
-}
-
-.skill-list {
-    overflow: hidden;
-}
-
-.skill-tiles-container li {
-    padding: 2px;
-    height: 195px;
-}
-.skill-wrapper {
-    background: url(/assets/web-icons.png) no-repeat 0 0;
-    background-size: 200px;
-    height: 200px;
-    width: 200px;
-    position: absolute;
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-    transition: transform 0.5s ease-out, opacity 0.5s;
-}
-.skill-wrapper.hide {
-    transform: translate3d(0, 100px, 0);
-    opacity: 0;
-}
-.skill-wrapper.angular {
-    background-position: 0 0;
+.tile-wrapper.angular {
     background-color: #c22b28;
 }
-.skill-wrapper.js {
-    background-position: 0 -200px;
+.tile-wrapper.js {
     background-color: #fdc72c;
 }
-.skill-wrapper.ts {
-    background-position: 0 -400px;
+.tile-wrapper.ts {
     background-color: #007acc;
 }
-.skill-wrapper.html {
-    background-position: 0 -600px;
+.tile-wrapper.html {
     background-color: #ff5426;
 }
 
