--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -114,6 +114,85 @@ section.background {
 }
 /* Route Components Base Styles - End */
 
+.content section {
+    padding: 20px 0;
+    margin: 0 auto;
+}
+
+.content section h2 {
+    color: #454545;
+    font-family: Playfair Display;
+    padding-left: 0;
+    padding-top: 10px;
+    border-bottom: thin dotted;
+}
+
+.content section p {
+    padding: 20px 0;
+}
+
+.feature-content p {
+    padding-left: 20px;
+}
+
+p.sub_desc {
+    padding: 2em 0.5em 1em;
+}
+
+.tiles-wrapper {
+    position: relative;
+}
+
+.tiles-container {
+    padding: 10px 0;
+}
+
+.skill-list {
+    overflow: hidden;
+}
+
+.tiles-container li {
+    height: 205px;
+}
+.tile-wrapper {
+    background-size: 200px;
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+    box-shadow: 0 0 5px 1px rgba(0, 0,0,0.2);
+    transition: transform 0.5s ease-out, opacity 0.5s;
+}
+.tile-wrapper.hide {
+    transform: translate3d(0, 100px, 0);
+    opacity: 0;
+}
+.tile-wrapper i {
+    font-size: 7em;
+    color: #FFFFFF;
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-align: center;   
+    transform: scale3d(1, 1, 1);
+    transition: transform 0.5s;
+}
+.tile-wrapper:hover i {
+    transform: scale3d(1.2, 1.2, 1);
+}
+
+.tile-wrapper i:before {
+    position: relative;
+    top: 35px;
+    left: 0;
+    right: 0;
+}
+
+.tile-wrapper a {
+    text-decoration: none;
+}
+
 /* Tab Styles - Start */
 @media (max-width: 650px) {
     .main-content {
