Adding Art image thumbnails

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
     (enteredViewport)="updateSlideCount($event, 2)">
     <div class="dp overview-dp">
       <h2>Projects</h2>
-      <div class="alpha-initial-bg">w</div>
+      <div class="alpha-initial-bg">P</div>
       <div class="underline"></div>
       <div class="button-wrapper">
         <div class="background"></div>
@@ -35,7 +35,7 @@
     (enteredViewport)="updateSlideCount($event, 3)">
     <div class="dp overview-dp">
       <h2>Blog</h2>
-      <div class="alpha-initial-bg">S</div>
+      <div class="alpha-initial-bg">B</div>
       <div class="underline"></div>
       <div class="button-wrapper">
         <div class="background"></div>
