--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,21 +1,21 @@
 <div class="content art-content center-stage">
   <h1>Art</h1>
-  <div class="content-wrapper below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">A collection of my sketches and paintings</h2>
     <div class="feature-content">
     </div>
-    <div class="list-wrapper">
-      <div class="loading-icon" [ngClass]="{'animate': isLoading}">
-      </div>
-      <ul class="art-list clearfix">
-        <li id="{{item.id}}" *ngFor="let item of imageList; let first = first" [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPortrait,
-                       'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPortrait}">
-          <div class="image-wrapper">
-            <img class="art-images" #imgItem class="hide" title="{{item.title}}" src="{{item.url}}" />
-            <div class="image-title">{{item.title}}</div>
-          </div>
-        </li>
-      </ul>
+  </div>
+  <div class="list-wrapper">
+    <div class="loading-icon" [ngClass]="{'animate': isLoading}">
     </div>
+    <ul class="art-list clearfix">
+      <li id="{{item.id}}" *ngFor="let item of imageList; let first = first" [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPortrait,
+                       'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPortrait}">
+        <div class="image-wrapper">
+          <img class="art-images" #imgItem class="hide" title="{{item.title}}" src="{{item.url}}" />
+          <div class="image-title">{{item.title}}</div>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
