--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -63,6 +63,8 @@ section.background {
 .content .feature-content {
     width: 60%;
     float: left;
+    padding-left: 10px;
+    min-height: 20em;
 }
 
 .content.art-content h2.main {
@@ -132,7 +134,7 @@ section.background {
 }
 
 .feature-content p {
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 p.sub_desc {
@@ -210,6 +212,11 @@ p.sub_desc {
 
     .content .feature-content {
         width: 100%;
+        padding-left: 0;
+    }
+
+    .feature-content p {
+        padding-left: 0;
     }
 }
 /* Tab Styles - End */
