--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -196,7 +196,7 @@ button:hover .act-icon:before {
 /* Mobile Styles - End */
 
 /* Scroll Directive Styles - Start */
-[appJsOnscroll] {
+.view-check {
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
     -ms-transform: translateY(0);
@@ -204,14 +204,14 @@ button:hover .act-icon:before {
     transition: transform 0.7s ease-out, opacity 0.7s;
     opacity: 1;
 }
-.below-view {
+.view-check.below-view {
     -webkit-transform: translateY(100px);
     -moz-transform: translateY(100px);
     -ms-transform: translateY(100px);
    transform: translateY(100px);
    opacity: 0;
 }
-.above-view {
+.view-check.above-view {
     -webkit-transform: translateY(-100px);
     -moz-transform: translateY(-100px);
     -ms-transform: translateY(-100px);
