--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <section class="background">
   <me-card></me-card>
-  <div class="main-content">
+  <div class="main-content" [ngClass]="{'fixed-header': isHeaderFix}">
     <router-outlet></router-outlet>
   </div>
   <footer class="main-footer">
-    <div class="logo-section">
-      <i class="icon-logo-svg"></i>
-    </div>
   </footer>
 </section>
