--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -50,14 +50,19 @@
     background-size: 100%;
 }
 
+.list-wrapper {
+    position: relative;
+    min-height: 50em;
+}
+
 /* For Phones - Start */
 @media (max-width: 600px) {
-    /*.art-list li.potrait {
-        width: 50%;
-    }*/
-    .image-wrapper li {
-        width: 100%;
-        height: auto;
+    li.landscape .image-wrapper {
+        height: 18em;
+    }
+
+    li.potrait .image-wrapper {
+        height: 32em;
     }
 
     .image-wrapper img {
