--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -9,8 +9,8 @@
     <div class="loading-icon" [ngClass]="{'animate': isLoading}">
     </div>
     <ul class="art-list clearfix">
-      <li id="{{item.id}}" *ngFor="let item of imageList; let first = first" [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPortrait,
-                       'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPortrait}">
+      <li id="{{item.id}}" *ngFor="let item of imageList; let first = first" class="col-xs-12" [ngClass]="{'potrait col-sm-3 col-md-3 col-lg-3': item.isPortrait,
+                       'landscape col-sm-6 col-md-6 col-lg-6': !item.isPortrait}">
         <div class="image-wrapper">
           <img class="art-images" #imgItem class="hide" title="{{item.title}}" src="{{item.url}}" />
           <div class="image-title">{{item.title}}</div>
