--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -1,5 +1,6 @@
 .main-header {
-    position: relative;
+    position: absolute;
+    width: 100%;
     background: #fff;
     height: 38em;
     box-shadow: 0 2px 20px rgba(0,0,0,.1);
