--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,12 +2,17 @@ section.background {
     position: absolute;
     background: #fafafa;
     width: 100%;
+    min-height: 100%;
     margin: 0;
     overflow: hidden;
 }
 
 .main-content {
-    min-height: 50em;
+    margin-bottom: 15em;
+}
+
+.main-content.fixed-header {
+    min-height: 100em;
 }
 
 .js-logo {
@@ -87,13 +92,15 @@ section.background {
 }
 
 .main-footer {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 6em;
-    background: #333;
+    background: #dbdbdb;
     margin-top: 2em;
     text-align: center;
     padding-top: 1em;
+    bottom: 0;
+    border-top: thin solid #ccc;
 }
 
 .logo-section {
@@ -199,7 +206,9 @@ p.sub_desc {
 /* Tab Styles - Start */
 @media (max-width: 650px) {
     .main-content {
+        /* min-height: 0; */
         padding-top: 1em;
+        margin-bottom: 0;
     }
     .main-content.fix-header {
         margin-top: 31em;
