--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
-  <div class="content-wrapper clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">Hi! I am Jayabratha Saha, friends call me Jay.</h2>
     <div class="feature-content">
       <p>
@@ -15,27 +15,27 @@
       </p>
     </div>
   </div>
-  <section class="my-tiles below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
+  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
     <div class="tiles-wrapper">
       <h2>Tech Skills</h2>
       <div class="tiles-container">
         <ul class="clearfix skill-list">
-          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <div #skillItem class="tile-wrapper angular hide">
               <i class="icon-social-angular"></i>
             </div>
           </li>
-          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <div #skillItem class="tile-wrapper js hide">
               <i class="icon-social-javascript"></i>
             </div>
           </li>
-          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <div #skillItem class="tile-wrapper ts hide">
               <i class="icon-social-html5"></i>
             </div>
           </li>
-          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <div #skillItem class="tile-wrapper html hide">
               <i class="icon-social-css3"></i>
             </div>
