--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,6 @@
 <div class="content blog-content center-stage">
   <h1>Blog</h1>
-  <div class="content-wrapper below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">My blogs will appear here</h2>
   </div>
 </div>
