--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,31 +20,41 @@
       <h2>Tech Skills</h2>
       <div class="tiles-container">
         <ul class="clearfix skill-list">
-          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <div #skillItem class="tile-wrapper angular hide">
+          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+            <div #skillItem class="tile-wrapper small angular hide">
               <i class="icon-social-angular"></i>
             </div>
           </li>
-          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <div #skillItem class="tile-wrapper js hide">
+          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+            <div #skillItem class="tile-wrapper small js hide">
               <i class="icon-social-javascript"></i>
             </div>
           </li>
-          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <div #skillItem class="tile-wrapper ts hide">
+          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+            <div #skillItem class="tile-wrapper small html hide">
               <i class="icon-social-html5"></i>
             </div>
           </li>
-          <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <div #skillItem class="tile-wrapper html hide">
+          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+            <div #skillItem class="tile-wrapper small css hide">
               <i class="icon-social-css3"></i>
+            </div>
+          </li>
+          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+            <div #skillItem class="tile-wrapper small firebase hide">
+              <img src="../../assets/firebase-logo.png" alt="Firebase" />
+            </div>
+          </li>
+          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
+            <div #skillItem class="tile-wrapper small ts hide">
+              <img src="../../assets/typescript-logo.png" alt="TypeScript" />
             </div>
           </li>
         </ul>
       </div>
       <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
-        I am current working on MEAN stack technologies specializing on front-end including TypeScript, Angular along with base web
-        technologies. I have also experience in working with Ionic and Firebase.
+        I am currently working on MEAN stack technologies specializing on front-end including TypeScript, Angular along with base
+        web technologies. I have also experience in working with Ionic and Firebase.
       </p>
     </div>
   </section>
@@ -55,12 +65,14 @@
         <ul>
           <li>
             <div #expItem class="exp-wrapper clearfix">
-              <div class="logo-wrapper col-xs-4 col-sm-4 col-md-4 col-lg-4">
+              <div class="logo-wrapper">
                 <img src="assets/sgm-logo.png" />
               </div>
-              <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                <h3>Sapient Global Markets</h3>
-                <div class="time">Oct, 2016 - present</div>
+              <div class="exp-summary">
+                <div class="exp-header">
+                  <h3>Sapient Global Markets</h3>
+                  <div class="time">Oct, 2016 - present</div>
+                </div>
                 <p>
                   I worked as Senior Interactive Developer for Wells Fargo Bank. I used this opportunity to design and develop apps that qualify
                   the web accessibilty specifications and fulfill the user experience guidelines. Here I worked on custom
@@ -71,12 +83,14 @@
           </li>
           <li>
             <div #expItem class="exp-wrapper clearfix">
-              <div class="logo-wrapper col-xs-4 col-sm-4 col-md-4 col-lg-4">
+              <div class="logo-wrapper">
                 <img src="assets/tcs-logo.png" />
               </div>
-              <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                <h3>Tata Consultancy Services</h3>
-                <div class="time">March, 2012 - Sep, 2016</div>
+              <div class="exp-summary">
+                <div class="exp-header">
+                  <h3>Tata Consultancy Services</h3>
+                  <div class="time">March, 2012 - Sep, 2016</div>
+                </div>
                 <p>
                   I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked as Java Developer but worked on multiple
                   technologies inclusing PHP, shell scripting, frontend stuff and lot more ebing on a support and enhancement
