--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,10 +11,8 @@
 .scroll-indicator {
     display: block;
     position: fixed;
-    margin: auto;
     right: 2em;
-    top: -2em;
-    bottom: 0;
+    top: 10em;
     width: 1px;
     height: 19.3em;
 }
@@ -59,6 +57,10 @@
     width: 5px;
     height: 5px;
     background: #2196F3;
+}
+
+.overview-wrapper {
+    min-height: 800px;
 }
 
 .overview {
