--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -23,13 +23,15 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 100%;
     padding: 5px 10px 20px;
-    background: #0db079;
+    background: #0707078f;
     color: #ffff;
-    font-size: 1.3em;
-    -webkit-transition: transform 0.3s linear;
-    transition: transform 0.3s linear;
-    transform: translate3d(0, 5em, 0);
+    font-size: 2em;
+    padding: 25px;
+    -webkit-transition: transform 0.2s linear;
+    transition: transform 0.2s linear;
+    transform: translate3d(0, 16em, 0);
 }
 
 .image-wrapper:hover .image-title {
