--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -204,14 +204,14 @@ button:hover .act-icon:before {
     transition: transform 0.7s ease-out, opacity 0.7s;
     opacity: 1;
 }
-.view-check.below-view {
+.below-view {
     -webkit-transform: translateY(100px);
     -moz-transform: translateY(100px);
     -ms-transform: translateY(100px);
    transform: translateY(100px);
    opacity: 0;
 }
-.view-check.above-view {
+.above-view {
     -webkit-transform: translateY(-100px);
     -moz-transform: translateY(-100px);
     -ms-transform: translateY(-100px);
