--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -12,7 +12,6 @@
     height: 100%;
     opacity: 1;
     transform: translate3d(0, 0, 0);
-    transition: opacity 0.5s, transform 0.8s;
     -webkit-transition: all 0.5s linear;
     transition: all 0.5s linear;
     -webkit-transform: scale3d(1, 1, 1);
@@ -57,7 +56,7 @@
 .list-wrapper {
     position: relative;
     min-height: 50em;
-    margin-bottom: 10em;
+    margin: 4em 0 10em;
 }
 
 /* For Phones - Start */
